# mini-jam

./: CMakeLists.txt  build_and_run.sh  compile_commands.json  debug_build.sh
.cache/clangd/index/: main.cpp.DD73FFC3DD7D078E.idx  raygui.h.A42ACAAD073BAAF9.idx  raylib.h.234540F0EA9552BD.idx
src/: Assert.hpp  Entity.hpp  Global.cpp  Global.hpp  Level.cpp  Level.hpp  Log.hpp  Rhythm.cpp  Rhythm.hpp  SFXAtlas.cpp  SFXAtlas.hpp  Scoring.cpp  Scoring.hpp  TextureAtlas.cpp  TextureAtlas.hpp  Types.hpp  main.cpp  rhythm.cpp
